--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/rubik": "^0.2.2",
     "@expo/vector-icons": "^13.0.0",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/stack": "^6.3.12",
     "eslint-plugin-react-native": "^4.0.0",
     "expo": "~47.0.12",
+    "expo-font": "^11.0.1",
     "expo-status-bar": "~1.4.2",
+    "lottie-react-native": "5.1.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
     "react-native-web": "~0.18.9",
